- Fixed bug #43244 (firebird: closeCursor w/o returned data kills process)